--- a/package.json
+++ b/package.json
@@ -6,23 +6,34 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start:prod": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run --dir src/core"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "8.3.1",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "20.10.5",
     "@typescript-eslint/eslint-plugin": "6.16.0",
     "@typescript-eslint/parser": "6.16.0",
+    "@vitest/coverage-v8": "1.1.0",
+    "@vitest/ui": "1.1.0",
     "eslint": "8.56.0",
+    "factory.ts": "1.4.1",
+    "msw": "2.0.11",
     "prisma": "5.7.1",
     "tsup": "8.0.1",
     "tsx": "4.7.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vite-tsconfig-paths": "4.2.3",
+    "vitest": "1.1.0"
   },
   "dependencies": {
     "@prisma/client": "5.7.1",
+    "axios": "1.6.3",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.25.2",
     "zod": "3.22.4"
