--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start:dev": "tsx watch src/server.ts",
     "start:prod": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run --dir src/core"
+    "test": "vitest run --dir src/core",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
