fix: code quality action step

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -8,17 +8,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Get and setup Node version
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: "npm"
 
       - name: Code format
-      - run: npm run lint
+        run: npm run lint
 
       - name: Run Unit Tests
-      - run: npm ci
-      - run: npm run test
+        run: npm ci
+        run: npm run test
