--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Code format
         run: npm run lint
 
-      - name: Run Unit Tests
+      - name: NPM CI
         run: npm ci
+
+      - name: Run Unit Tests
         run: npm run test
