--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -16,6 +16,9 @@ jobs:
           node-version: 18
           cache: "npm"
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Code format
         run: npm run lint
 
