--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -17,13 +17,10 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: npm ci --legacy-peer-deps
 
       - name: Code format
         run: npm run lint
-
-      - name: NPM CI
-        run: npm ci
 
       - name: Run Unit Tests
         run: npm run test
