--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:prod": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/core",
+    "test:e2e": "vitest run --dir src/web",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "lint": "eslint src --ext .ts --fix"
@@ -19,6 +20,7 @@
     "@faker-js/faker": "8.3.1",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.10.5",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "6.16.0",
     "@typescript-eslint/parser": "6.16.0",
     "@vitest/coverage-v8": "1.1.0",
@@ -27,6 +29,7 @@
     "factory.ts": "1.4.1",
     "msw": "2.0.11",
     "prisma": "5.7.1",
+    "supertest": "6.3.3",
     "tsup": "8.0.1",
     "tsx": "4.7.0",
     "typescript": "5.3.3",
