--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vitest": "1.1.0"
   },
   "dependencies": {
+    "@fastify/jwt": "7.2.4",
     "@prisma/client": "5.7.1",
     "axios": "1.6.3",
     "bcryptjs": "2.4.3",
