--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
   },
   "dependencies": {
     "@fastify/jwt": "7.2.4",
+    "@fastify/multipart": "8.0.0",
+    "@fastify/static": "6.12.0",
     "@prisma/client": "5.7.1",
     "axios": "1.6.3",
     "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.25.2",
+    "fastify-multer": "2.0.3",
+    "fastify-multipart": "5.4.0",
     "zod": "3.22.4"
   }
 }
