--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@faker-js/faker": "8.3.1",
     "@types/bcryptjs": "2.4.6",
+    "@types/mz": "2.7.8",
     "@types/node": "20.10.5",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "6.16.0",
@@ -47,6 +48,7 @@
     "fastify": "4.25.2",
     "fastify-multer": "2.0.3",
     "fastify-multipart": "5.4.0",
+    "mz": "2.7.0",
     "zod": "3.22.4"
   }
 }
