--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vitest": "1.1.0"
   },
   "dependencies": {
+    "@fastify/cookie": "9.2.0",
     "@fastify/jwt": "7.2.4",
     "@fastify/multipart": "8.0.0",
     "@fastify/static": "6.12.0",
